--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   news-feed:
@@ -31,14 +30,37 @@ services:
 
   minio:
     image: minio/minio:latest
-    command: server /data
-    ports:
-      - "9000:9000"
     environment:
-      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
-      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
+      MINIO_ROOT_USER: ${MINIO_ACCESS_KEY}
+      MINIO_ROOT_PASSWORD: ${MINIO_SECRET_KEY}
+    ports:
+      - "9000:9000" # MinIO Console/API
+      - "9001:9001" # MinIO Admin Console
     volumes:
       - minio-data:/data
+    command: server /data --console-address ":9001"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  createbucket:
+    image: minio/mc:latest
+    container_name: createbucket
+    depends_on:
+      minio:
+        condition: service_healthy
+    entrypoint: >
+      /bin/sh -c "
+      sleep 20 && \
+      mc alias set myminio http://minio:9000  ${MINIO_ACCESS_KEY} ${MINIO_SECRET_KEY} && \
+      mc mb myminio/${MINIO_BUCKET}"
+    environment:
+      MC_HOST_minio: http://minio:9000
+      MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
+      MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
+      MINIO_BUCKET: ${MINIO_BUCKET}
 
 volumes:
   db-data:
