--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - db
       - redis
       - minio
+    volumes:
+      - .:/app
 
   db:
     image: mysql:latest
@@ -54,8 +56,8 @@ services:
     entrypoint: >
       /bin/sh -c "
       sleep 20 && \
-      mc alias set myminio http://minio:9000  ${MINIO_ACCESS_KEY} ${MINIO_SECRET_KEY} && \
-      mc mb myminio/${MINIO_BUCKET}"
+      mc alias set myminio http://minio:9000 ${MINIO_ACCESS_KEY} ${MINIO_SECRET_KEY} && \
+      mc ls myminio/${MINIO_BUCKET} || mc mb myminio/${MINIO_BUCKET}"
     environment:
       MC_HOST_minio: http://minio:9000
       MINIO_ACCESS_KEY: ${MINIO_ACCESS_KEY}
