change user endpoint to grpc service

--- a/.env.webApp
+++ b/.env.webApp
@@ -1,4 +1,22 @@
 APP_NAME=WebApp
-APP_PORT=3000
+APP_PORT=8080
 NEWSFEED_APP_PORT=8081
 POST_USER_FRIENDS_PORT=8082
+JWTSecret=123456
+
+# Database configuration
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=password
+DB_NAME=newsfeed
+
+# Redis configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+# MinIO configuration
+MINIO_ENDPOINT=localhost:9000
+MINIO_ACCESS_KEY=your-access-key
+MINIO_SECRET_KEY=your-secret-key
+MINIO_BUCKET=your-bucket
