--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,16 @@ services:
       MINIO_SECRET_KEY: ${MINIO_SECRET_KEY}
       MINIO_BUCKET: ${MINIO_BUCKET}
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"  # Expose Prometheus on localhost:9090
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml  # Mount the configuration file
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+
 volumes:
   db-data:
   minio-data:
